--- a/.env
+++ b/.env
@@ -7,13 +7,21 @@ BASE_URL="https://tgapi.sleepagotchi.com/v1/tg"
 ADVANCED_ANTI_DETECTION=true
 
 #Thời gian nghỉ (phut)
-TIME_SLEEP=5 
+TIME_SLEEP=15 
 
 #set false if you want optimization ram 
 AUTO_SHOW_COUNT_DOWN_TIME_SLEEP=true
 
-#auto vuot ai
+#auto khai thác 
 AUTO_CHALLENGE=true
+#chọn map bắt đầu và kết thúc để khai thác VD: MAP_RANGE_CHALLENGE=[1,5] sẽ khai thác từ map 1 đến map 5 | MAP_RANGE_CHALLENGE=[3,0] sẽ khai thác từ map 3 đến map hiện tại đang được mở khóa
+#để kết thúc là 0 sẽ mặc định follow theo map cao nhất đang mở khóa. Đây là tính năng nhằm mục đích rà soát lại các map chưa khai thác hết và không gây ảnh hưởng đến hiêu suất tool, 
+# Khuyến khích để trong khoảng map mà chưa khai thác hết tài nguyên, VD: MAP_RANGE_CHALLENGE=[2,0] hoặc MAP_RANGE_CHALLENGE=[2,6] nếu trong khoản này có nhiều mỏ chưa khai thác hết
+# !!!Không khuyến khích để [1,0] vì setup này tool sẽ quét từ map đầu tiên đến map cuối cùng được mở khóa (tạo ra một lượng lớn yêu cầu API ảnh hưởng hiệu suất)
+MAP_RANGE_CHALLENGE=[5,10]
+# true/false | bật/tắt chế độ MAP_RANGE_CHALLENGE, chế độ này là false thì chỉ khai thác ở map cao nhất đang mở khóa | Nên để false nếu các map trước đó đã khai thác hết
+ENABLE_MAP_RANGE_CHALLENGE=false
+
 
 #code gift | VD CODE_GATEWAY=["123435","321233"]
 CODE_GATEWAY=[]
@@ -22,6 +30,7 @@ AUTO_CODE_GATEWAY=false
 #upgrade 
 AUTO_UGRADE_HERO=true
 MAX_LEVEL_UGRADE_HERO=5
+
 # type hero to upgrade: Rare, Epic, Legendary
 TYPE_UPGRADE_HERO=["Rare", "Epic", "Legendary"]
 
