--- a/.env
+++ b/.env
@@ -1,38 +1,45 @@
 #id các task bỏ qua, không cần quan tâm nếu không hiểu
 SKIP_TASKS =[""]
 BASE_URL="https://tgapi.sleepagotchi.com/v1/tg"
-
+ENABLE_DEBUG=false
 
 # cập nhật tự động true/false
 ADVANCED_ANTI_DETECTION=true
 
 #Thời gian nghỉ (phut)
-TIME_SLEEP=15 
+TIME_SLEEP=60
 
 #set false if you want optimization ram 
 AUTO_SHOW_COUNT_DOWN_TIME_SLEEP=true
 
 #auto khai thác 
 AUTO_CHALLENGE=true
+AUTO_CHALLENGE_CLAN=false
+
 #chọn map bắt đầu và kết thúc để khai thác VD: MAP_RANGE_CHALLENGE=[1,5] sẽ khai thác từ map 1 đến map 5 | MAP_RANGE_CHALLENGE=[3,0] sẽ khai thác từ map 3 đến map hiện tại đang được mở khóa
 #để kết thúc là 0 sẽ mặc định follow theo map cao nhất đang mở khóa. Đây là tính năng nhằm mục đích rà soát lại các map chưa khai thác hết và không gây ảnh hưởng đến hiêu suất tool, 
 # Khuyến khích để trong khoảng map mà chưa khai thác hết tài nguyên, VD: MAP_RANGE_CHALLENGE=[2,0] hoặc MAP_RANGE_CHALLENGE=[2,6] nếu trong khoản này có nhiều mỏ chưa khai thác hết
 # !!!Không khuyến khích để [1,0] vì setup này tool sẽ quét từ map đầu tiên đến map cuối cùng được mở khóa (tạo ra một lượng lớn yêu cầu API ảnh hưởng hiệu suất)
-MAP_RANGE_CHALLENGE=[5,10]
+
+MAP_RANGE_CHALLENGE=[7,15]
+
+
 # true/false | bật/tắt chế độ MAP_RANGE_CHALLENGE, chế độ này là false thì chỉ khai thác ở map cao nhất đang mở khóa | Nên để false nếu các map trước đó đã khai thác hết
-ENABLE_MAP_RANGE_CHALLENGE=false
+ENABLE_MAP_RANGE_CHALLENGE=true
 
 
 #code gift | VD CODE_GATEWAY=["123435","321233"]
-CODE_GATEWAY=[]
+CODE_GATEWAY=["189020"]
 AUTO_CODE_GATEWAY=false
 
-#upgrade 
-AUTO_UGRADE_HERO=true
-MAX_LEVEL_UGRADE_HERO=5
+#auto reset | Warning: check TYPE_HERO_RESET you want reset (Rare, Epic, Legendary)
+AUTO_RESET_HERO=false
+TYPE_HERO_RESET=["Legendary","Epic"]
 
-# type hero to upgrade: Rare, Epic, Legendary
-TYPE_UPGRADE_HERO=["Rare", "Epic", "Legendary"]
+#upgrade | set TYPE_HERO_UPGRADE you want upgrade (Rare, Epic, Legendary)
+AUTO_UGRADE_HERO=true
+MAX_LEVEL_UGRADE_HERO=14
+TYPE_HERO_UPGRADE=["Rare"]
 
 #Thời gian chờ giữa các yêu cầu API 
 DELAY_BETWEEN_REQUESTS=[1,5]
@@ -42,7 +49,7 @@ DELAY_START_BOT=[1,15]
 
 
 #Số luồng
-MAX_THEADS=10
+MAX_THEADS=20
 
 #số luồng dành cho bản không dùng proxy
 MAX_THEADS_NO_PROXY=1
