--- a/.env
+++ b/.env
@@ -6,6 +6,9 @@ ENABLE_DEBUG=false
 # cập nhật tự động true/false
 ADVANCED_ANTI_DETECTION=true
 
+#use proxy or not
+USE_PROXY=true
+
 #Thời gian nghỉ (phut)
 TIME_SLEEP=60
 
@@ -14,19 +17,12 @@ AUTO_SHOW_COUNT_DOWN_TIME_SLEEP=true
 
 #auto khai thác 
 AUTO_CHALLENGE=true
-AUTO_CHALLENGE_CLAN=false
 
-#chọn map bắt đầu và kết thúc để khai thác VD: MAP_RANGE_CHALLENGE=[1,5] sẽ khai thác từ map 1 đến map 5 | MAP_RANGE_CHALLENGE=[3,0] sẽ khai thác từ map 3 đến map hiện tại đang được mở khóa
-#để kết thúc là 0 sẽ mặc định follow theo map cao nhất đang mở khóa. Đây là tính năng nhằm mục đích rà soát lại các map chưa khai thác hết và không gây ảnh hưởng đến hiêu suất tool, 
-# Khuyến khích để trong khoảng map mà chưa khai thác hết tài nguyên, VD: MAP_RANGE_CHALLENGE=[2,0] hoặc MAP_RANGE_CHALLENGE=[2,6] nếu trong khoản này có nhiều mỏ chưa khai thác hết
-# !!!Không khuyến khích để [1,0] vì setup này tool sẽ quét từ map đầu tiên đến map cuối cùng được mở khóa (tạo ra một lượng lớn yêu cầu API ảnh hưởng hiệu suất)
+# để false thì map bắt đầu mặc định là map hiện tại đang được mở khoá, set true để tự chọn map bắt đầu, dùng để clear tài nguyên các map trước đó
+ENABLE_MAP_INDEX_CHALLENGE=true
 
-MAP_RANGE_CHALLENGE=[7,15]
-
-
-# true/false | bật/tắt chế độ MAP_RANGE_CHALLENGE, chế độ này là false thì chỉ khai thác ở map cao nhất đang mở khóa | Nên để false nếu các map trước đó đã khai thác hết
-ENABLE_MAP_RANGE_CHALLENGE=true
-
+#chọn map bắt đầu, map kết thúc = map bắt đầu + 10 | VD: START_MAP_CHALLENGE_INDEX=1 thì map kết thúc là 11
+START_MAP_CHALLENGE_INDEX=7
 
 #code gift | VD CODE_GATEWAY=["123435","321233"]
 CODE_GATEWAY=["189020"]
@@ -45,11 +41,11 @@ TYPE_HERO_UPGRADE=["Rare"]
 DELAY_BETWEEN_REQUESTS=[1,5]
 
 #Thời gian chờ trước khi chạy bot
-DELAY_START_BOT=[1,15]
+DELAY_START_BOT=[1,5]
 
 
 #Số luồng
-MAX_THEADS=20
+MAX_THEADS=50
 
 #số luồng dành cho bản không dùng proxy
 MAX_THEADS_NO_PROXY=1
