--- a/.env
+++ b/.env
@@ -1,13 +1,15 @@
 #id các task bỏ qua, không cần quan tâm nếu không hiểu
 SKIP_TASKS =[""]
 BASE_URL="https://tgapi.sleepagotchi.com/v1/tg"
-ENABLE_DEBUG=false
+ENABLE_DEBUG=true
 
 # cập nhật tự động true/false
 ADVANCED_ANTI_DETECTION=true
 
 #use proxy or not
 USE_PROXY=true
+
+AUTO_TASK=true
 
 #Thời gian nghỉ (phut)
 TIME_SLEEP=60
